[package]
name = "aws-ne-sys"
version = "0.3.0"
authors = ["Tomas Tauber", "Dan Horobeanu <dhr@amazon.com>"]
edition = "2018"
license = "Apache-2.0"
description = "AWS KMS decrypt FFI wrapper for Nitro Enclaves (from aws-nitro-enclaves-acm repo)"
repository = "https://github.com/crypto-com/aws-ne-sys"

[dependencies]
